syntax = "proto3";
package neutron.dex;

import "gogoproto/gogo.proto";
import "neutron/dex/pair_id.proto";
import "neutron/dex/pool.proto";

option go_package = "github.com/neutron-org/neutron/v5/x/dex/types";

message DepositRecord {
  PairID pair_id = 1;
  string shares_owned = 2 [
    (gogoproto.moretags) = "yaml:\"shares_owned\"",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "shares_owned"
  ];
  int64 center_tick_index = 3;
  int64 lower_tick_index = 4;
  int64 upper_tick_index = 5;
  uint64 fee = 6;
  string total_shares = 7 [
    (gogoproto.moretags) = "yaml:\"total_shares\"",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = true,
    (gogoproto.jsontag) = "total_shares"
  ];
  Pool pool = 8 [(gogoproto.nullable) = true];
}
