syntax = "proto3";
package neutron.dex;

option go_package = "github.com/neutron-org/neutron/v3/x/dex/types";

message PairID {
  string token0 = 1;
  string token1 = 2;
}
